helm/foo-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foo
  namespace: demoistio
spec:
  hosts:
    - "*"
  gateways:
    - foo-gateway
  http:
    - match:
        - uri:
            prefix: /v1
      route:
        - destination:
            host: foo
            port:
              number: 9080
